# msg_lib

./: CMakeLists.txt  README.md
inc/: msglib.h
msglib_test/: msglib_test.c
src/: msglib.c
